ansible/roles/network_policies/files/kyverno/01-default-deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: kyverno
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
